[package]
name = "bot7685-ext"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/wyf7685/Bot7685-ext"

[lib]
name = "_ext"
crate-type = ["cdylib", "rlib"]

[build-dependencies.chrono]
version = "0.4.42"
features = ["now"]
default-features = false

[dependencies.pyo3]
version = "0.27.1"
features = ["abi3", "extension-module", "generate-import-lib"]

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png"]

[dependencies.lazy_static]
version = "1.5.0"
