[project]
name = "bot7685-ext"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.9.6"]
build-backend = "maturin"

[dependency-groups]
dev = ["maturin>=1.9.6"]

[tool.maturin]
python-source = "python"
module-name = "bot7685_ext._ext"
